--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
   <body style="background: #ddd;">
     <div class="container">
       <h1>Gimme Moustache</h1>
-      <img src="#" alt="Pic" id="test">
       <p>What's the best thing to draw? Moustaches on people.</p>
       <ol>
         <li>Click <a href="#" id="newface">here</a> for a new face</li>
@@ -40,18 +39,18 @@
         </div>
         <div class="">
           <input type="color" id="color" name="head"
-            value="#e66465">
+            value="#c4d7f8">
         </div>
         <div class="">
           <label for="opacity">Opacity:</label>
           <input id="opacity" type="range" id="vol" name="vol" min="0" max="100" value="100">
         </div>
-        <div class="icon-container" id="save">
+        <div class="icon-container d-none" id="save">
           <img class="p-1" src="icons/save.png" alt="Save" />
         </div>
       </div>
       <canvas id="draw" style="background: #fff"></canvas>
-      <div id="saved" class="pt-3"></div>
+      <div id="saved" class="pt-3 d-none"></div>
     </div>
 
     <div class="container pt-3">
