updated readme, fixed some homepage stylings

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
       <div id="saved" class="pt-3 d-none"></div>
     </div>
 
-    <div class="container pt-3">
+    <div class="container pt-3" style="max-width: 830px">
       <h2>What is this?</h2>
 
       <p>
