--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,15 @@
       rel="stylesheet"
       href="../node_modules/bootstrap/dist/css/bootstrap.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css" />
     <title>Gimme Moustache</title>
   </head>
-  <body style="background: #ddd">
+  <body style="background: #f3f3f3">
     <div class="container" style="max-width: 830px">
       <h1>Gimme Moustache</h1>
       <p>What's the best thing to draw? Moustaches on people.</p>
