--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
     <div class="container" style="max-width: 830px">
       <h1>Gimme Moustache</h1>
       <p>What's the best thing to draw? Moustaches on people.</p>
+      <p>
+        Also, Gimme Moustache sounds like a command to kiss a dude with a
+        moustache, which I guess is funny? 🤷‍♂️ I didn't notice this until after I
+        named the repo. Oh well.
+      </p>
       <ol>
         <li>Click <a href="#" class="gm-newface">here</a> for a new face</li>
         <li>Draw a moustache on their face</li>
