saving works! XD

--- a/src/index.html
+++ b/src/index.html
@@ -63,13 +63,13 @@
             value="100"
           />
         </div>
-        <div class="icon-container d-none" id="save">
+        <div class="icon-container" id="save">
           <img class="p-1" src="icons/save.png" alt="Save" />
         </div>
       </div>
       <canvas id="draw" style="background: #fff"></canvas>
       <button class="gm-newface btn btn-primary w-100">New Face</button>
-      <div id="saved" class="pt-3 d-none"></div>
+      <div id="saved" class="pt-3"></div>
     </div>
 
     <div class="container pt-3" style="max-width: 830px">
