add limits, delete functionality

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
         </div>
       </div>
       <canvas id="draw" style="background: #fff"></canvas>
-      <button class="gm-newface btn btn-primary w-100">New Face</button>
-      <div id="saved" class="py-5 mb-5"></div>
+      <button class="gm-newface btn btn-primary w-100 mb-5">New Face</button>
+      <div id="saved" class="d-flex mb-5"></div>
     </div>
 
     <div class="container pt-5 mt-5" style="max-width: 830px">
