--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
 
     <link rel="stylesheet" href="styles.css" />
     <title>Gimme Moustache</title>
