non-mobile warning added, old comments removed

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
   <body style="background: #f3f3f3">
     <div class="container" style="max-width: 830px">
       <h1 class="text-center py-5 my-5">Gimme Moustache</h1>
+      <h2 id="desktop-alert" class="text-danger d-none">
+        Please use this app on a desktop or laptop (canvas does not work on
+        mobile)
+      </h2>
       <p class="pt-3">What's the best thing to draw? Moustaches on people.</p>
       <p>
         Also, Gimme Moustache sounds like a command to kiss a dude with a
