default tool now spray

--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,13 @@
       </ol>
       <div class="">
         <div class="px-2 d-flex align-items-center">
-          <div class="icon-container icon-selected" id="pencil">
+          <div class="icon-container" id="pencil">
             <img class="p-1" src="icons/pencil.png" alt="Pencil" />
           </div>
           <div class="icon-container" id="line">
             <img class="p-1" src="icons/line.png" alt="Line" />
           </div>
-          <div class="icon-container" id="spray">
+          <div class="icon-container icon-selected" id="spray">
             <img class="p-1" src="icons/spray.png" alt="Spray Paint" />
           </div>
           <div class="icon-container" id="eraser">
